syntax = "proto3";

package api;

option go_package = "apipb";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

message Export {
  repeated google.protobuf.Struct nodes =1;
  repeated google.protobuf.Struct edges=2;
}

message Pong {
  string message =1;
}

message RaftNode {
  string node_id =1;
  string address =2;
}

message AuthConfig {
  repeated string jwks_sources =1;
  repeated string auth_expressions =2;
}

message RaftConfig {
  string bind =1;
  string storage_path =2;
  string join =3;
  string node_id =4;
}

message HTTPConfig {
  string bind =1;
  repeated string allowed_origins=2;
  repeated string allowed_headers =3;
  repeated string allowed_methods =4;
}

message GRPCConfig {
  string bind =1;
}

message Config {
  HTTPConfig http =1;
  GRPCConfig grpc =2;
  RaftConfig raft =3;
  AuthConfig auth =4;
}

service PrivateService {
  rpc Ping(google.protobuf.Empty) returns(Pong) {}
  rpc JoinCluster(RaftNode) returns(google.protobuf.Empty) {}
  rpc GetAuth(google.protobuf.Empty) returns(AuthConfig){}
  rpc SetAuth(AuthConfig) returns(AuthConfig){}
}